--- a/training/train-llama-31-405b-qlora.ipynb
+++ b/training/train-llama-31-405b-qlora.ipynb
@@ -44,8 +44,7 @@
    "outputs": [],
    "source": [
     "# Install Pytorch for FSDP and FA/SDPA\n",
-    "%pip install torch tensorboard\n",
-    "# !ltt install torch --pytorch-computation-backend=cu121\n",
+    "%pip install \"torch==2.4.0\" tensorboard\n",
     "# Install Hugging Face libraries\n",
     "%pip install  --upgrade \"transformers==4.44.0\" \"datasets==2.21.0\" \"accelerate==0.33.0\" \"evaluate==0.4.1\" \"bitsandbytes==0.43.3\" \"huggingface_hub==0.24.2\" \"trl==0.9.6\" \"peft==0.12.0\" \"hf_transfer==0.1.8\" \"flash-attn==2.6.3\"\n",
     "# if your are running on AWS cluster you might need to update the nccl version\n",
@@ -201,7 +200,7 @@
     "%%writefile llama_31_405b_fsdp_qlora.yaml\n",
     "# script parameters\n",
     "model_id: \"meta-llama/Meta-Llama-3.1-405B\" # Hugging Face model id\n",
-    "# model_id: \"hugging-quants/Meta-Llama-3.1-405B-BNB-NF4-BF16\" # Hugging Face model id\n",
+    "# TODO: model_id: \"hugging-quants/Meta-Llama-3.1-405B-BNB-NF4-BF16\" # Hugging Face model id\n",
     "dataset_path: \".\"                      # path to dataset\n",
     "max_seq_len:  2048                     # max sequence length for model and packing of the dataset\n",
     "# training parameters\n",
@@ -251,28 +250,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3449951553.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    HF_HUB_ENABLE_HF_TRANSFER=1  HF_HUB_CACHE=/scratch/.cache/ accelerate launch --config_file ./configs/fsdp_qlora.yaml ./scripts/run_fsdp_qlora.py --config llama_31_405b_fsdp_qlora.yaml!\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# slurm | script |  accelerate | config\n",
-    "sbatch --job-name=l31-405 slurm/hf.slurm scripts/run_fsdp_qlora.py configs/fsdp_qlora.yaml llama_31_405b_fsdp_qlora.yaml\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HF_HUB_ENABLE_HF_TRANSFER=1  HF_HUB_CACHE=/scratch/.cache/ accelerate launch --config_file ./configs/fsdp_qlora.yaml ./scripts/run_fsdp_qlora.py --config llama_31_405b_fsdp_qlora.yaml!"
+    "## Run training via slurm script slurm | script |  accelerate | config\n",
+    "# sbatch --job-name=l31-405 slurm/hf.slurm scripts/run_fsdp_qlora.py configs/fsdp_qlora.yaml llama_31_405b_fsdp_qlora.yaml\n",
+    "# Run training via terminal\n",
+    "!HF_HUB_ENABLE_HF_TRANSFER=1  HF_HUB_CACHE=/scratch/.cache/ accelerate launch --config_file ./configs/fsdp_qlora.yaml ./scripts/run_fsdp_qlora.py --config llama_31_405b_fsdp_qlora.yaml"
    ]
   },
   {
@@ -280,17 +274,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Expected Memory usage:**\n",
-    "* Full-finetuning with FSDP needs ~16X80GB GPUs\n",
-    "* FSDP + LoRA needs ~8X80GB GPUs\n",
-    "* FSDP + Q-Lora needs ~2x40GB GPUs \n",
-    "* FSDP + Q-Lora + CPU offloading needs 4x24GB GPUs, with 22 GB/GPU and 127 GB CPU RAM with a sequence length of 3072 and a batch size of 1. \n",
+    "**Tested Infrastucture Setups:**\n",
+    "✅ 8x H100 80GB\n",
+    "✅ 4x H100 80GB _(needs ~800GB CPU memory)_\n",
+    "❌ 8x L40 48GB _(should work but not tested)_\n",
     "\n",
-    "The training of Llama 3 70B with Flash Attention for 3 epochs with a dataset of 10k samples takes 45h on a `g5.12xlarge`. The instance costs `5.67$/h` which would result in a total cost of `255.15$`. This sounds expensive but allows you to fine-tune a Llama 3 70B on small GPU resources. If we scale up the training to 4x H100 GPUs, the training time will be reduced to ~1,25h. If we assume 1x H100 costs `5-10$/h` the total cost would between `25$-50$`.\n",
+    "The training of Llama 3.1 405B with Flash Attention for 3 epochs with a dataset of 10k samples takes 45h on a `p5.48xlarge`. The instance costs `5.67$/h` which would result in a total cost of `255.15$`.  \n",
     "\n",
-    "We can see a trade-off between accessibility and performance. If you have access to more/better compute you can reduce the training time and cost, but even with small resources you can fine-tune a Llama 3 70B. The cost/performance is different since for 4x A10G GPUs we need to offload the model to the CPU which reduces the overall flops. \n",
-    "\n",
-    "_Note: During evaluation and testing of the blog post I noticed that ~40 max steps (80 samples stacked to 3k sequence length) are enough for first results. The training for 40 steps ~1h or ~$5._"
+    "_Note: During evaluation and testing of the blog post I noticed that ~40 max steps (80 samples stacked to 3k sequence length) are enough for first results. The training for 40 steps ~1h or ~$95._"
    ]
   },
   {
@@ -301,7 +292,7 @@
     "\n",
     "When using QLoRA, we only train adapters and not the full model. This means when saving the model during training we only save the adapter weights and not the full model. If you want to save the full model, which makes it easier to use with Text Generation Inference you can merge the adapter weights into the model weights using the `merge_and_unload` method and then save the model with the `save_pretrained` method. This will save a default model, which can be used for inference.\n",
     "\n",
-    "_Note: You might require > 192GB CPU Memory._"
+    "_Note: You might require > 800GB CPU Memory._"
    ]
   },
   {
@@ -331,7 +322,7 @@
    "source": [
     "## 4. Test Model and run Inference\n",
     "\n",
-    "After the training is done we want to evaluate and test our model. We will load different samples from the original dataset and evaluate the model manually. Evaluating Generative AI models is not a trivial task since 1 input can have multiple correct outputs. If you want to learn more about evaluating generative models, check out [Evaluate LLMs and RAG a practical example using Langchain and Hugging Face](https://www.philschmid.de/evaluate-llm) blog post."
+    "After the training is done we want to evaluate and test our model. We will load different samples from the original dataset and evaluate the model manually. Evaluating Generative AI models is not a trivial task since 1 input can have multiple correct outputs. If you want to learn more about evaluating generative models, check out [Evaluate LLMs and RAG a practical example using Langchain and Hugging Face](https://www.philschmid.de/evaluate-llm) or [LLM Evaluation doesn't need to be complicated](https://www.philschmid.de/llm-evaluation) blog post."
    ]
   },
   {
@@ -344,7 +335,7 @@
     "from peft import AutoPeftModelForCausalLM\n",
     "from transformers import AutoTokenizer \n",
     "\n",
-    "peft_model_id = \"./llama-3-70b-hf-no-robot\"\n",
+    "peft_model_id = \"./llama-31-405b-hf-no-robot\"\n",
     "\n",
     "# Load Model with PEFT adapter\n",
     "model = AutoPeftModelForCausalLM.from_pretrained(\n",
