--- a/training/fine-tune-multimodal-llms-with-trl.ipynb
+++ b/training/fine-tune-multimodal-llms-with-trl.ipynb
@@ -68,34 +68,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are using a GPU with Ampere architecture (e.g. NVIDIA A10G or RTX 4090/3090) or newer you can use Flash attention. Flash Attention is a an method that reorders the attention computation and leverages classical techniques (tiling, recomputation) to significantly speed it up and reduce memory usage from quadratic to linear in sequence length. The TL;DR; accelerates training up to 3x. Learn more at [FlashAttention](https://github.com/Dao-AILab/flash-attention/tree/main).\n",
-    "\n",
-    "_Note: If your machine has less than 96GB of RAM and lots of CPU cores, reduce the number of `MAX_JOBS`. On the `g6.2xlarge` we used `4`._"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch; assert torch.cuda.get_device_capability()[0] >= 8, 'Hardware not supported for Flash Attention'\n",
-    "# install flash-attn\n",
-    "!pip install ninja packaging\n",
-    "!pip install flash-attn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_Installing flash attention can take quite a bit of time (10-45 minutes)._"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We will use the [Hugging Face Hub](https://huggingface.co/models) as a remote model versioning service. This means we will automatically push our model, logs and information to the Hub during training. You must register on the [Hugging Face](https://huggingface.co/join) for this. After you have an account, we will use the `login` util from the `huggingface_hub` package to log into our account and store our token (access key) on the disk.\n",
     "\n"
    ]
@@ -130,7 +102,7 @@
     "  {\"role\": \"system\", \"content\": [{\"type\":\"text\", \"text\": \"You are a helpful....\"}]},\n",
     "  {\"role\": \"user\", \"content\": [{\n",
     "    \"type\": \"text\", \"text\":  \"How many dogs are in the image?\", \n",
-    "    \"type\": \"image\", \"text\": None \n",
+    "    \"type\": \"image\", \"text\": <PIL.Image> \n",
     "    }]},\n",
     "  {\"role\": \"assistant\", \"content\": [{\"type\":\"text\", \"text\": \"There are 3 dogs in the image.\"}]}\n",
     "],\n",
@@ -152,7 +124,9 @@
     "Only return description. The description should be SEO optimized and for a better mobile search experience.\n",
     "\n",
     "##PRODUCT NAME##: {product_name}\n",
-    "##CATEGORY##: {category}\"\"\"\n"
+    "##CATEGORY##: {category}\"\"\"\n",
+    "\n",
+    "system_message = \"You are an expert product description writer for Amazon.\""
    ]
   },
   {
@@ -170,10 +144,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "# Convert dataset to OAI messages\n",
-    "system_message = \"You are an expert product description writer for Amazon.\"\n",
-    "\n",
-    "\n",
+    "# Convert dataset to OAI messages       \n",
     "def format_data(sample):\n",
     "    return {\"messages\": [\n",
     "                {\n",
@@ -185,10 +156,7 @@
     "                    \"content\": [\n",
     "                        {\n",
     "                            \"type\": \"text\",\n",
-    "                            \"text\": prompt.format(\n",
-    "                                product_name=sample[\"Product Name\"],\n",
-    "                                category=sample[\"Category\"],\n",
-    "                            ),\n",
+    "                            \"text\": prompt.format(product_name=sample[\"Product Name\"], category=sample[\"Category\"]),\n",
     "                        },{\n",
     "                            \"type\": \"image\",\n",
     "                            \"image\": sample[\"image\"],\n",
@@ -220,20 +188,13 @@
    "source": [
     "## 4. Fine-tune VLM using `trl` and the `SFTTrainer` \n",
     "\n",
-    "We are now ready to fine-tune our model. We will use the [SFTTrainer](https://huggingface.co/docs/trl/sft_trainer) from `trl` to fine-tune our model. The `SFTTrainer` makes it straightfoward to supervise fine-tune open LLMs and VLMs. The `SFTTrainer` is a subclass of the `Trainer` from the `transformers` library and supports all the same features, including logging, evaluation, and checkpointing, but adds additiional quality of life features, including:\n",
-    "* Dataset formatting, including conversational and instruction format\n",
-    "* Training on completions only, ignoring prompts\n",
-    "* Packing datasets for more efficient training\n",
-    "* PEFT (parameter-efficient fine-tuning) support including Q-LoRA\n",
-    "* Preparing the model and tokenizer for conversational fine-tuning (e.g. adding special tokens)\n",
+    "We are now ready to fine-tune our model. We will use the [SFTTrainer](https://huggingface.co/docs/trl/sft_trainer) from `trl` to fine-tune our model. The `SFTTrainer` makes it straightfoward to supervise fine-tune open LLMs and VLMs. The `SFTTrainer` is a subclass of the `Trainer` from the `transformers` library and supports all the same features, including logging, evaluation, and checkpointing, but adds additiional quality of life features.\n",
     " \n",
-    "We will use the PEFT features in our example. As peft method we will use [QLoRA](https://arxiv.org/abs/2305.14314) a technique to reduce the memory footprint of large language models during finetuning, without sacrificing performance by using quantization. If you want to learn more about QLoRA and how it works, check out [Making LLMs even more accessible with bitsandbytes, 4-bit quantization and QLoRA](https://huggingface.co/blog/4bit-transformers-bitsandbytes) blog post."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "We will use the PEFT features in our example. As peft method we will use [QLoRA](https://arxiv.org/abs/2305.14314) a technique to reduce the memory footprint of large language models during finetuning, without sacrificing performance by using quantization. If you want to learn more about QLoRA and how it works, check out [Making LLMs even more accessible with bitsandbytes, 4-bit quantization and QLoRA](https://huggingface.co/blog/4bit-transformers-bitsandbytes) blog post.\n",
+    "\n",
+    "\n",
+    "_Note: We cannot use Flash Attention as we need to pad our multimodal inputs._\n",
+    "\n",
     "We are going to use Qwen 2 VL 7B model, but we can easily swap out the model for another model, including Meta AI's [Llama-3.2-11B-Vision](https://huggingface.co/meta-llama/Llama-3.2-11B-Vision-Instruct), Mistral AI's [Pixtral-12B](https://huggingface.co/mistralai/Pixtral-12B-2409) or any other LLMs by changing our `model_id` variable. We will use bitsandbytes to quantize our model to 4-bit.\n",
     "\n",
     "_Note: Be aware the bigger the model the more memory it will require. In our example we will use the 7B version, which can be tuned on 24GB GPUs._\n",
@@ -251,7 +212,7 @@
     "from transformers import AutoModelForVision2Seq, AutoProcessor, BitsAndBytesConfig\n",
     "\n",
     "# Hugging Face model id\n",
-    "model_id = \"Qwen/Qwen2-VL-2B-Instruct\" \n",
+    "model_id = \"Qwen/Qwen2-VL-7B-Instruct\" \n",
     "\n",
     "# BitsAndBytesConfig int-4 config\n",
     "bnb_config = BitsAndBytesConfig(\n",
@@ -262,7 +223,7 @@
     "model = AutoModelForVision2Seq.from_pretrained(\n",
     "    model_id,\n",
     "    device_map=\"auto\",\n",
-    "    # attn_implementation=\"flash_attention_2\",\n",
+    "    # attn_implementation=\"flash_attention_2\", # not supported for training\n",
     "    torch_dtype=torch.bfloat16,\n",
     "    quantization_config=bnb_config\n",
     ")\n",
@@ -314,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we can start our training we need to define the hyperparameters (`TrainingArguments`) we want to use and make sure our inputs are correcty provided to the model. Different to text-only supervised fine-tuning we need to provide the image to the model as well. Our template only signals the model that an image is present, but we need to provide the content as well. Therefore we create a custom `DataCollator` which formates the inputs correctly and include the image features. "
+    "Before we can start our training we need to define the hyperparameters (`SFTConfig`) we want to use and make sure our inputs are correcty provided to the model. Different to text-only supervised fine-tuning we need to provide the image to the model as well. Therefore we create a custom `DataCollator` which formates the inputs correctly and include the image features. We use the [process_vision_info](https://github.com/QwenLM/Qwen2-VL/blob/main/qwen-vl-utils/src/qwen_vl_utils/vision_process.py#L321) method from a utility package the Qwen2 team provides. If you are using another model, e.g. Llama 3.2 Vision you might have to check if that creates the same processsed image information. "
    ]
   },
   {
@@ -328,13 +289,13 @@
     "from qwen_vl_utils import process_vision_info\n",
     "\n",
     "args = SFTConfig(\n",
-    "    output_dir=\"qwen2-2b-instruct-amazon-description\", # directory to save and repository id\n",
+    "    output_dir=\"qwen2-7b-instruct-amazon-description\", # directory to save and repository id\n",
     "    num_train_epochs=3,                     # number of training epochs\n",
-    "    per_device_train_batch_size=1,          # batch size per device during training\n",
+    "    per_device_train_batch_size=4,          # batch size per device during training\n",
     "    gradient_accumulation_steps=8,          # number of steps before performing a backward/update pass\n",
     "    gradient_checkpointing=True,            # use gradient checkpointing to save memory\n",
     "    optim=\"adamw_torch_fused\",              # use fused adamw optimizer\n",
-    "    logging_steps=10,                       # log every 10 steps\n",
+    "    logging_steps=5,                       # log every 10 steps\n",
     "    save_strategy=\"epoch\",                  # save checkpoint every epoch\n",
     "    learning_rate=2e-4,                     # learning rate, based on QLoRA paper\n",
     "    bf16=True,                              # use bfloat16 precision\n",
@@ -426,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The training with Flash Attention for 3 epochs with a dataset of 10k samples took 02:05:58 on a `g6.2xlarge`. The instance costs `1,212$/h` which brings us to a total cost of only `1.8$`."
+    "Training for 3 epochs with a dataset of ~1k samples took 01:31:58 on a `g6.2xlarge`. The instance costs `0.9776$/h` which brings us to a total cost of only `1.4$`."
    ]
   },
   {
@@ -462,12 +423,12 @@
     "import torch\n",
     "from transformers import AutoProcessor, AutoModelForVision2Seq\n",
     "\n",
-    "adapter_path = \"./qwen2-2b-instruct-amazon-description\"\n",
+    "adapter_path = \"./qwen2-7b-instruct-amazon-description\"\n",
     "\n",
     "# Load Model base model\n",
     "model = AutoModelForVision2Seq.from_pretrained(\n",
     "  model_id,\n",
-    "  device_map={\"\": \"cuda:0\"},\n",
+    "  device_map=\"auto\",\n",
     "  torch_dtype=torch.float16\n",
     ")\n",
     "processor = AutoProcessor.from_pretrained(model_id)"
@@ -487,6 +448,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from qwen_vl_utils import process_vision_info\n",
+    "\n",
     "# sample from amazon.com\n",
     "sample = {\n",
     "  \"product_name\": \"Hasbro Marvel Avengers-Serie Marvel Assemble Titan-Held, Iron Man, 30,5 cm Actionfigur\",\n",
@@ -529,7 +492,7 @@
     "    )\n",
     "    inputs = inputs.to(model.device)\n",
     "    # Inference: Generation of the output\n",
-    "    generated_ids = model.generate(**inputs, max_new_tokens=128, top_p=1.0, do_sample=True, temperature=0.8)\n",
+    "    generated_ids = model.generate(**inputs, max_new_tokens=256, top_p=1.0, do_sample=True, temperature=0.8)\n",
     "    generated_ids_trimmed = [out_ids[len(in_ids) :] for in_ids, out_ids in zip(inputs.input_ids, generated_ids)]\n",
     "    output_text = processor.batch_decode(\n",
     "        generated_ids_trimmed, skip_special_tokens=True, clean_up_tokenization_spaces=False\n",
@@ -537,8 +500,10 @@
     "    return output_text[0]\n",
     "\n",
     "# let's generate the description\n",
-    "base_descriotion = generate_description(sample, model, processor)\n",
-    "print(base_descriotion)"
+    "base_description = generate_description(sample, model, processor)\n",
+    "print(base_description)\n",
+    "# you can disable the active adapter if you want to rerun it with\n",
+    "# model.disable_adapters()"
    ]
   },
   {
@@ -554,8 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_adapter(adapter_path, adapter_name=\"product_descriptor\")\n",
-    "model.set_adapter(\"product_descriptor\")\n",
+    "model.load_adapter(adapter_path) # load the adapter and activate\n",
     "\n",
     "ft_description = generate_description(sample, model, processor)\n",
     "print(ft_description)"
@@ -570,9 +534,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_031db_row0_col0, #T_031db_row0_col1 {\n",
+       "  text-align: left;\n",
+       "  white-space: pre-wrap;\n",
+       "  border: 1px solid black;\n",
+       "  padding: 10px;\n",
+       "  width: 250px;\n",
+       "  overflow-wrap: break-word;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_031db\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_031db_level0_col0\" class=\"col_heading level0 col0\" >Base Generation</th>\n",
+       "      <th id=\"T_031db_level0_col1\" class=\"col_heading level0 col1\" >Fine-tuned Generation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_031db_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_031db_row0_col0\" class=\"data row0 col0\" >Introducing the Hasbro Marvel Avengers Series Marvel Assemble Titan-Held Iron Man Action Figure, a 30.5 cm tall action figure that is sure to bring the excitement of the Marvel Universe to life! This highly detailed Iron Man figure is perfect for fans of all ages and makes a great addition to any toy collection. With its sleek red and gold armor, this Iron Man figure is ready to take on any challenge. The Titan-Held feature allows for a more realistic and dynamic pose, making it a must-have for any Marvel fan. Whether you're a collector or just looking for a fun toy to play with, this Iron Man action figure is the perfect choice.</td>\n",
+       "      <td id=\"T_031db_row0_col1\" class=\"data row0 col1\" >Unleash the power of Iron Man with this 30.5 cm Hasbro Marvel Avengers Titan Hero Action Figure!  This highly detailed Iron Man figure is perfect for collectors and kids alike.  Features a realistic design and articulated joints for dynamic poses.  A must-have for any Marvel fan's collection!</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from IPython.display import display, HTML\n",
@@ -596,7 +598,7 @@
     "    # Display the styled DataFrame\n",
     "    display(HTML(styled_df.to_html()))\n",
     "  \n",
-    "compare_generations(base_descriotion, ft_description)"
+    "compare_generations(base_description, ft_description)"
    ]
   },
   {
@@ -625,18 +627,14 @@
    "outputs": [],
    "source": [
     "from peft import PeftModel\n",
-    "import torch\n",
     "from transformers import AutoProcessor, AutoModelForVision2Seq\n",
     "\n",
-    "adapter_path = \"./qwen2-2b-instruct-amazon-description\"\n",
-    "base_model_id = \"Qwen/Qwen2-VL-2B-Instruct\"\n",
+    "adapter_path = \"./qwen2-7b-instruct-amazon-description\"\n",
+    "base_model_id = \"Qwen/Qwen2-VL-7B-Instruct\"\n",
     "merged_path = \"merged\"\n",
     "\n",
     "# Load Model base model\n",
-    "model = AutoModelForVision2Seq.from_pretrained(\n",
-    "  model_id,\n",
-    "  low_cpu_mem_usage=True,\n",
-    ")\n",
+    "model = AutoModelForVision2Seq.from_pretrained(model_id, low_cpu_mem_usage=True)\n",
     "\n",
     "# Path to save the merged model\n",
     "\n",
@@ -671,11 +669,6 @@
     "    --gradient_checkpointing\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
