Update (positive, anchor) to (anchor, positive)

--- a/training/fine-tune-embedding-model-for-rag.ipynb
+++ b/training/fine-tune-embedding-model-for-rag.ipynb
@@ -371,7 +371,7 @@
     "    model=model, # bg-base-en-v1\n",
     "    args=args,  # training arguments\n",
     "    train_dataset=train_dataset.select_columns(\n",
-    "        [\"positive\", \"anchor\"]\n",
+    "        [\"anchor\", \"positive\"]\n",
     "    ),  # training dataset\n",
     "    loss=train_loss,\n",
     "    evaluator=evaluator,\n",
