--- a/training/fine-tune-llms-in-2025.ipynb
+++ b/training/fine-tune-llms-in-2025.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# How to fine-tune open LLMs in 2025 with Hugging Face\n",
     "\n",
-    "Large Language Models (LLMs) continued their important through 2024, with several major developments completely outperforming previous models. The focus continued to more smaller, more powerful models from companies like Meta, Qwen, or Google. These models not only became more powerful, but also more efficient. We got Llama models as small as 1B parameters outperforming Llama 2 13B. \n",
+    "Large Language Models (LLMs) continued their important role in 2024, with several major developments completely outperforming previous models. The focus continued to more smaller, more powerful models from companies like Meta, Qwen, or Google. These models not only became more powerful, but also more efficient. We got Llama models as small as 1B parameters outperforming Llama 2 13B. \n",
     "\n",
     "These LLMs can handle many tasks out-of-the-box through prompting, including chatbots, question answering, and summarization. However, for specialized applications requiring high accuracy or domain expertise, fine-tuning remains a powerful approach to achieve higher quality results than prompting alone, reduce costs by training smaller, more efficient models, and ensure reliability and consistency for specific use cases.\n",
     "\n",
