--- a/training/fine-tune-llms-in-2025.ipynb
+++ b/training/fine-tune-llms-in-2025.ipynb
@@ -235,14 +235,15 @@
     "model_revision: main\n",
     "torch_dtype: bfloat16\n",
     "attn_implementation: flash_attention_2\n",
-    "use_liger_kernels: true\n",
+    "use_liger: true\n",
     "bf16: true\n",
+    "tf32: true\n",
     "\n",
     "# Dataset arguments\n",
     "dataset_id_or_path: train_dataset.json\n",
-    "max_seq_length: 2048\n",
+    "max_seq_length: 1024\n",
     "packing: true\n",
-    "per_device_eval_batch_size: 4\n",
+    "per_device_train_batch_size: 16\n",
     "gradient_accumulation_steps: 4\n",
     "gradient_checkpointing: true\n",
     "gradient_checkpointing_kwargs:\n",
@@ -272,7 +273,7 @@
     "seed: 42\n",
     "\n",
     "# Hugging Face Hub \n",
-    "push_to_hub: true\n",
+    "push_to_hub: false\n",
     "hub_model_id: llama-3-1-8b-math-orca-qlora\n",
     "hub_strategy: every_save\n",
     "```\n",
@@ -287,6 +288,25 @@
    "outputs": [],
    "source": [
     "!python scripts/run_sft.py --config receipes/llama-3-1-8b-qlora.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I ran several experiments with different optimization strategies, including Flash Attention, Liger Kernels, Q-Lora, Spectrum, and Full-Finetuning to compare the time it takes to fine-tune a model. The results are summarized in the following table:\n",
+    "\n",
+    "| Model | Train samples | Hardware | Method | train sequence length | Global BS | packing | Flash Attention | Liger Kernels | est. optimization steps | est. train time |\n",
+    "| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
+    "| Llama-3.1-8B | 10,000 | 1x L4 24GB | Q-LoRA | 1024 | 4 | ❌ | ❌ | ❌ | 2500 | ~330 min |\n",
+    "| Llama-3.1-8B | 10,000 | 1x L4 24GB | Q-LoRA | 1024 | 4 | ✅ | ❌ | ❌ | 1352 | ~290 min |\n",
+    "| Llama-3.1-8B | 10,000 | 1x L4 24GB | Q-LoRA | 1024 | 16 | ✅ | ✅ | ❌ | 338 | ~210 min |\n",
+    "| Llama-3.1-8B | 10,000 | 1x L4 24GB | Q-LoRA | 1024 | 64 | ✅ | ✅ | ✅ | 84 | ~110 min |\n",
+    "| Llama-3.1-8B | 10,000 | 4x L4 24GB | Q-LoRA | 1024 | 256 | ✅ | ✅ | ✅ | 21 | ~29 min |\n",
+    "| Llama-3.1-8B | 10,000 | 8x L4 24GB | Q-LoRA | 1024 | 256 | ✅ | ✅ | ✅ | 21 | ~15 min |\n",
+    "\n",
+    "\n",
+    "_Note: For distributed training Pytorch FSDP was used and we didn't go beyond a bs of 256 as this yields the best performance._ "
    ]
   },
   {
@@ -408,7 +428,7 @@
     "Note: change the `num_processes` to the number of GPUs you want to use.\n",
     "\n",
     "```bash\n",
-    "accelerate launch --config_file training/configs/fsdp_config.yaml --num_processes 8 training/scripts/run_sft.py --config training/receipes/llama-3-1-8b-qlora.yaml\n",
+    "accelerate launch --config_file configs/accelerate_configs/fsdp_qlora.yaml --num_processes 4 scripts/run_sft.py --config receipes/llama-3-1-8b-qlora.yaml\n",
     "```\n",
     "\n"
    ]
